--- a/support/templates/try/try.html
+++ b/support/templates/try/try.html
@@ -46,7 +46,6 @@
             border-radius: 50px;
             transition: all 0.3s ease;
         }
-        
     </style>
 </head>
 
@@ -56,7 +55,7 @@
         <div class="hero">
             <h1>Experience Virtual Try-On</h1>
             <p>See how your favorite items look on you before you buy.</p>
-            <a href="#" class="cta-button">
+            <a href="{% url 'tryon' %}" class="cta-button">
                 TRY NOW
             </a>
         </div>
