--- a/app/templates/fashion.html
+++ b/app/templates/fashion.html
@@ -356,6 +356,7 @@
                                  <li><a href="{% url 'sell' %}">BEST SELLERS</a></li>
                                  <li><a href="{% url 'home' %}">NEW RELEASES</a></li>
                                  <li><a href="{% url 'home' %}">TODAYS DEALS</a></li>
+                                 <li><a href="https://www.shopar.ai/collection/watches?product=66618cf59d3fb1edda45d3ba&mode=ar">TRY ON WATCHES</a></li>
                               </ul>
                            </div>
                         </div>
@@ -369,7 +370,7 @@
                      <center>
                         <h1>WATCH</h1>
                      </center>
-                     <div class="tshirt_img"><img src="{% static 'images/electronics/watch1.jpg' %}"></div>
+                     <div class="tshirt_img"><img src="{% static 'images/electronics/watch.png' %}"></div>
                      <div class="btn_main">
                         <div class="buy_bt"><a href="{% url 'add_item' %}">Add</a></div>
                         <div class="seemore_bt"><b>Rs 1000</b></div>
@@ -381,7 +382,7 @@
                      <center>
                         <h1>WATCH</h1>
                      </center>
-                     <div class="tshirt_img"><img src="{% static 'images/electronics/watch2.jpg' %}"></div>
+                     <div class="tshirt_img"><img src="{% static 'images/electronics/watch2.png' %}"></div>
                      <div class="btn_main">
                         <div class="buy_bt"><a href="{% url 'add_item' %}">Add</a></div>
                         <div class="seemore_bt"><b>Rs 1000</b></div>
@@ -393,7 +394,7 @@
                      <center>
                         <h1>WATCH</h1>
                      </center>
-                     <div class="tshirt_img"><img src="{% static 'images/electronics/watch.webp' %}"></div>
+                     <div class="tshirt_img"><img src="{% static 'images/electronics/watch1.png' %}"></div>
                      <div class="btn_main">
                         <div class="buy_bt"><a href="{% url 'add_item' %}">Add</a></div>
                         <div class="seemore_bt"><b>Rs 1000</b></div>
