--- a/support/templates/try/try.html
+++ b/support/templates/try/try.html
@@ -55,7 +55,7 @@
         <div class="hero">
             <h1>Experience Virtual Try-On</h1>
             <p>See how your favorite items look on you before you buy.</p>
-            <a href="{% url 'tryon' %}" class="cta-button">
+            <a href="{% url 'try' %}" class="cta-button">
                 TRY NOW
             </a>
         </div>
