--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -85,7 +85,7 @@
         </form>
         <div class="blogin">
             <center>
-                <a href="{% url 'signup' %}" class="btn-login" style="text-decoration: none;">SignUp</a>
+                <a href="{% url 'new_register' %}" class="btn-login" style="text-decoration: none;">SignUp</a>
             </center>
         </div>
     </div>
