--- a/support/templates/try/try.html
+++ b/support/templates/try/try.html
@@ -11,6 +11,7 @@
     <style>
         /* General Reset */
         body {
+            background: linear-gradient(135deg, #7d31ce 0%, #70ddd2  100%);
             margin: 0;
             font-family: 'Arial', sans-serif;
             color: #333;
@@ -46,6 +47,24 @@
             border-radius: 50px;
             transition: all 0.3s ease;
         }
+
+        .sam {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .sam img {
+            width: 100%;
+            max-width: 700px;
+            border-radius: 15px;
+            box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.3);
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+
+        .sam img:hover {
+            transform: scale(1.05);
+            box-shadow: 0px 12px 20px rgba(0, 0, 0, 0.5);
+        }
     </style>
 </head>
 
@@ -55,9 +74,14 @@
         <div class="hero">
             <h1>Experience Virtual Try-On</h1>
             <p>See how your favorite items look on you before you buy.</p>
-            <a href="{% url 'try' %}" class="cta-button">
-                TRY NOW
-            </a>
+            <center>
+                <a href="{% url 'try' %}" class="cta-button">
+                    TRY NOW
+                </a>
+            </center>
+            <div class="sam">
+                <img src="{% static 'images/ecommerce3.jpg' %}" alt="sample">
+            </div>
         </div>
     </header>
 </body>
