--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -92,11 +92,13 @@
                   <a href="{% url 'fashion' %}">FASHION</a>
                   <a href="{% url 'cs' %}">SERVICE</a>
                   <a href="{% url 'sell' %}">SELLERS</a>
+                  <a href="https://www.aiease.ai/app/ai-object-replacer">CUSTOM</a>
                   <a href="{% url 'try' %}">TRY ON</a>
                   <a href="https://www.shopar.ai/collection/glasses?product=65e5a9275d759cd6d9458b97&mode=ar">AR
                      GLASS</a>
                   <a href="{% url 'wish' %}">WISH LIST</a>
                   <a href="https://open.spotify.com/">MUSIC</a>
+                  <a href="https://www.piccopilot.com/tools/tryon">VR TRY</a>
                   <a href="{% url 'map' %}">LOCATION</a>
                   <a href="{% url 'login' %}">LOGOUT</a>
                </div>
