--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -97,7 +97,7 @@
                   <a href="https://www.shopar.ai/collection/glasses?product=65e5a9275d759cd6d9458b97&mode=ar">AR
                      GLASS</a>
                   <a href="{% url 'wish' %}">WISH LIST</a>
-                  <a href="https://open.spotify.com/">MUSIC</a>
+                  <!-- <a href="https://open.spotify.com/">MUSIC</a> -->
                   <a href="https://www.piccopilot.com/tools/tryon">VR TRY</a>
                   <a href="{% url 'map' %}">LOCATION</a>
                   <a href="{% url 'login' %}">LOGOUT</a>
