--- a/support/templates/try/try.html
+++ b/support/templates/try/try.html
@@ -75,7 +75,7 @@
             <h1>Experience Virtual Try-On</h1>
             <p>See how your favorite items look on you before you buy.</p>
             <center>
-                <a href="{% url 'try' %}" class="cta-button">
+                <a href="{% url 'upload_image' %}" class="cta-button">
                     TRY NOW
                 </a>
             </center>
