--- a/app/templates/sample.html
+++ b/app/templates/sample.html
@@ -19,6 +19,7 @@
 
         h1 {
             text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+            color: #ffda79;
         }
 
         .eco {
@@ -79,7 +80,7 @@
 <body>
     <center>
         <h1 class="eco"><b>WELCOME TO ECOMMERCE</b></h1>
-        <h1><b>HOME PAGE</b></h1>
+        <h1><b>START UP PAGE</b></h1>
     </center>
 
     <div class="blogin">
