--- a/support/templates/support/upload_image.html
+++ b/support/templates/support/upload_image.html
@@ -75,6 +75,7 @@
             font-size: 1rem;
             cursor: pointer;
             transition: background-color 0.3s ease;
+            margin-bottom: 10px;
         }
 
         form button:hover {
@@ -92,6 +93,7 @@
             {{ form.as_p }}
             <button type="submit">Upload</button>
         </form>
+        <a href="https://huggingface.co/spaces/Kwai-Kolors/Kolors-Virtual-Try-On" style="text-decoration: none;">TRY ON</a>
     </div>
 </body>
 
