--- a/app/templates/add/wish.html
+++ b/app/templates/add/wish.html
@@ -23,9 +23,9 @@
                     <div class="custom_menu">
                         <ul>
                             <li><a href="{% url 'sell' %}">BEST SELLERS</a></li>
-                            <li><a href="{% url 'home' %}">NEW RELEASES</a></li>
-                            <li><a href="{% url 'home' %}">TODAYS DEALS</a></li>
-                            <li><a href="{% url 'home' %}">SPECIAL OFFERS</a></li>
+                            <li><a href=""onclick="showAlert()">NEW RELEASES</a></li>
+                            <li><a href=""onclick="showAlert()">TODAYS DEALS</a></li>
+                            <li><a href=""onclick="showAlert()">SPECIAL OFFERS</a></li>
                         </ul>
                     </div>
                 </div>
