--- a/app/templates/fashion.html
+++ b/app/templates/fashion.html
@@ -56,8 +56,8 @@
                <div class="custom_menu">
                   <ul>
                      <li><a href="{% url 'sell' %}">BEST SELLERS</a></li>
-                     <li><a href="{% url 'home' %}">NEW RELEASES</a></li>
-                     <li><a href="{% url 'home' %}">TODAYS DEALS</a></li>
+                     <li><a href=""onclick="showAlert()">NEW RELEASES</a></li>
+                     <li><a href=""onclick="showAlert()">TODAYS DEALS</a></li>
                      <li><a href="{% url 'home' %}">HOME PAGE</a></li>
                   </ul>
                </div>
@@ -174,8 +174,8 @@
                            <div class="custom_menu">
                               <ul>
                                  <li><a href="{% url 'sell' %}">BEST SELLERS</a></li>
-                                 <li><a href="{% url 'home' %}">NEW RELEASES</a></li>
-                                 <li><a href="{% url 'home' %}">TODAYS DEALS</a></li>
+                                 <li><a href=""onclick="showAlert()">NEW RELEASES</a></li>
+                                 <li><a href=""onclick="showAlert()">TODAYS DEALS</a></li>
                               </ul>
                            </div>
                         </div>
@@ -264,8 +264,8 @@
                            <div class="custom_menu">
                               <ul>
                                  <li><a href="{% url 'sell' %}">BEST SELLERS</a></li>
-                                 <li><a href="{% url 'home' %}">NEW RELEASES</a></li>
-                                 <li><a href="{% url 'home' %}">TODAYS DEALS</a></li>
+                                 <li><a href=""onclick="showAlert()">NEW RELEASES</a></li>
+                                 <li><a href=""onclick="showAlert()">TODAYS DEALS</a></li>
                               </ul>
                            </div>
                         </div>
@@ -354,8 +354,8 @@
                            <div class="custom_menu">
                               <ul>
                                  <li><a href="{% url 'sell' %}">BEST SELLERS</a></li>
-                                 <li><a href="{% url 'home' %}">NEW RELEASES</a></li>
-                                 <li><a href="{% url 'home' %}">TODAYS DEALS</a></li>
+                                 <li><a href=""onclick="showAlert()">NEW RELEASES</a></li>
+                                 <li><a href=""onclick="showAlert()">TODAYS DEALS</a></li>
                                  <li><a href="https://www.shopar.ai/collection/watches?product=66618cf59d3fb1edda45d3ba&mode=ar">TRY ON WATCHES</a></li>
                               </ul>
                            </div>
@@ -420,6 +420,9 @@
 
                   function closeNav() {
                      document.getElementById("mySidenav").style.width = "0";
+                  }
+                  function showAlert() {
+                     alert("COMMING SOON.....");
                   }
                </script>
 </body>
