--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -88,19 +88,18 @@
             <div class="containt_main">
                <div id="mySidenav" class="sidenav">
                   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                  <a href="{% url 'home' %}">HOME</a>
-                  <a href="{% url 'fashion' %}">FASHION</a>
-                  <a href="{% url 'cs' %}">SERVICE</a>
-                  <a href="{% url 'sell' %}">SELLERS</a>
-                  <a href="https://www.aiease.ai/app/ai-object-replacer">CUSTOM</a>
-                  <a href="{% url 'try' %}">TRY ON</a>
-                  <a href="https://www.shopar.ai/collection/glasses?product=65e5a9275d759cd6d9458b97&mode=ar">AR
-                     GLASS</a>
-                  <a href="{% url 'wish' %}">WISH LIST</a>
+                  <a href="{% url 'home' %}">Home</a>
+                  <a href="{% url 'fashion' %}">Fashion</a>
+                  <a href="{% url 'cs' %}">Service</a>
+                  <a href="{% url 'sell' %}">Sellers</a>
+                  <a href="https://www.aiease.ai/app/ai-object-replacer">Custom</a>
+                  <a href="{% url 'try' %}">Try On</a>
+                  <a href="https://www.shopar.ai/collection/glasses?product=65e5a9275d759cd6d9458b97&mode=ar">Ar Glass</a>
+                  <a href="{% url 'wish' %}">Wish List</a>
                   <!-- <a href="https://open.spotify.com/">MUSIC</a> -->
-                  <a href="https://www.piccopilot.com/tools/tryon">VR TRY</a>
-                  <a href="{% url 'map' %}">LOCATION</a>
-                  <a href="{% url 'login' %}">LOGOUT</a>
+                  <a href="https://www.piccopilot.com/tools/tryon">Vr Try</a>
+                  <a href="{% url 'map' %}">Location</a>
+                  <a href="{% url 'login' %}">Logout</a>
                </div>
                <span class="toggle_icon" onclick="openNav()"><img src="{% static 'images/toggle-icon.png' %}"></span>
                <div class="dropdown">
