--- a/app/templates/fashion.html
+++ b/app/templates/fashion.html
@@ -422,7 +422,7 @@
                      document.getElementById("mySidenav").style.width = "0";
                   }
                   function showAlert() {
-                     alert("COMMING SOON.....");
+                     alert("NOTHING TO SHOW.....");
                   }
                </script>
 </body>
