--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -97,7 +97,7 @@
                   <a href="https://www.shopar.ai/collection/glasses?product=65e5a9275d759cd6d9458b97&mode=ar">Ar Glass</a>
                   <a href="{% url 'wish' %}">Wish List</a>
                   <!-- <a href="https://open.spotify.com/">MUSIC</a> -->
-                  <a href="https://www.piccopilot.com/tools/tryon">Vr Try</a>
+                  <!-- <a href="https://www.piccopilot.com/tools/tryon">Vr Try</a> -->
                   <a href="{% url 'map' %}">Location</a>
                   <a href="{% url 'login' %}">Logout</a>
                </div>
@@ -299,7 +299,7 @@
 
    <script>
       function showAlert() {
-          alert("COMMING SOON.....");
+          alert("NOTHING TO SHOW.....");
       }
   </script>
 </body>
